2008-03-23 Martin Schaaf <mascha@ma-scha.de>

	* debian/changelog
	* configure.ac
	o pump to version 0.4.0rc4
	* src/ImageThought.py
	* src/utils.py
	o convert pixel array from pixbuf rgb order to cairo rgb order on exporting

2008-03-22 Martin Schaaf <mascha@ma-scha.de>

	* debian/changelog
	* configure.ac
	o pump to version 0.4.0rc3
	* src/ImageThought.py
	o ignore if an image isn't exportable

2008-03-22 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* debian/control
	Add python-gconf dependency.

2008-03-22 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MapList.py
	* src/Browser.py
	Save configuration via gconf.

2008-03-21 Martin Schaaf <mascha@ma-scha.de>

	* src/ImageThought.py
	o export also bitmaps to cairo surface (pdf, svg), but there is a small color problem

2008-03-21 Martin Schaaf <mascha@ma-scha.de>

	* debian/control
	o add newer standard version
	* src/ImageThought.py
	o fix exception by only replace whole text if a parent node exist

2008-03-21 Martin Schaaf <mascha@ma-scha.de>

	* debian/*
	o add debian package management support
	* configure.ac
	o set version to 0.4.0rc2

2008-03-21 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MainWindow.py
	Add export to pdf.

2008-03-21 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MapList.py
	* src/Browser.py
	Save and load browser size, fixing issue 18

2008-03-21 Martin Schaaf <mascha@ma-scha.de>

	* src/DrawingThought.py
	* src/MainWindow.py
	* src/utils.py
	* src/ImageThought.py
	* src/TextThought.py
	o add svg export (patch by Matthias Vogelgesang)

2008-03-21  Don Scorgie  <Don@Scorgie.org>

	* src/TextThought.py: 
	* src/BaseThought.py:
	* src/Links.py:
	* src/DrawingThought.py:
	Fix potential exception on map opening

	* src/DrawingThought.py:
	Give all points their own unique colour

	* src/MMapArea.py:
	Update the colour selectors when loading
	a map

2008-03-21 Martin Schaaf <mascha@ma-scha.de>

	* src/DrawingThought.py
	* src/MainWindow.py